z-index fix - anchornavi

--- a/sass/mixins/_mixins.navigations.scss
+++ b/sass/mixins/_mixins.navigations.scss
@@ -30,6 +30,7 @@
 
 @mixin item-anchor-navigation--full() {
   @include item-anchor-nav__text();
+  z-index: 2;
 
   li {
     display: inline-block;
